# learn-me-some-vulkan

./: Cargo.toml  README.md  build.rs
src/tutorials/: 00_base_code.rs  01_instance_creation.rs  02_validation_layers.rs  03_physical_device_selection.rs  04_logical_device.rs  05_window_surface.rs  06_swap_chain_creation.rs  07_image_view.rs  08_graphics_pipeline.rs  09_shader_modules.rs  10_fixed_functions.rs  11_render_passes.rs  13_framebuffers.rs  14_command_buffers.rs  15_rendering_and_presentation.rs  16_swap_chain_recreation.rs  17_vertex_input.rs  18_vertex_buffers.rs  19_staging_buffer.rs  20_index_buffer.rs  21_descriptor_layout.rs  22_descriptor_pools_and_sets.rs  23_image_view_and_sampler.rs  24_depth_buffer.rs  25_loading_models.rs  swap_chain.rs  utils.rs  vulkan_context.rs
src/tutorials/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
