[package]
authors = ["Kane Rogers <kane.m.rogers@gmail.com>"]
edition = "2018"
name = "learn-me-some-vulkan"
version = "0.1.0"

[dependencies]
ash = "0.31.0"
ash-window = "0.5"
cgmath = "0.17.0"
image = "0.22"
memoffset = "0.5.1"
num = "0.2"
tobj = "0.1.10"
winit = "0.20.0"
byte-slice-cast = "1.0"

# tutorial examples shortcut ---------------------------------
[[bin]]
name = "00"
path = "src/tutorials/00_base_code.rs"

[[bin]]
name = "01"
path = "src/tutorials/01_instance_creation.rs"

[[bin]]
name = "02"
path = "src/tutorials/02_validation_layers.rs"

[[bin]]
name = "03"
path = "src/tutorials/03_physical_device_selection.rs"

[[bin]]
name = "04"
path = "src/tutorials/04_logical_device.rs"

[[bin]]
name = "05"
path = "src/tutorials/05_window_surface.rs"

[[bin]]
name = "06"
path = "src/tutorials/06_swap_chain_creation.rs"

[[bin]]
name = "07"
path = "src/tutorials/07_image_view.rs"

[[bin]]
name = "08"
path = "src/tutorials/08_graphics_pipeline.rs"

[[bin]]
name = "09"
path = "src/tutorials/09_shader_modules.rs"
# ------------------------------------------------------------
